[package]
name = "rustls"
version = "0.23.16"
edition = "2021"

[dependencies]
rustls-crate = { package = "rustls", version = "0.23.16", default-features = false }

[features]
default = ["ring", "log", "logging", "std", "tls12"]
aws_lc_rs = []
log = ["rustls-crate/log"]
logging = ["rustls-crate/logging"]
std = ["rustls-crate/std"]
tls12 = ["rustls-crate/tls12"]
aws-lc-rs = []
brotli = ["rustls-crate/brotli"]
custom-provider = []
fips = ["rustls-crate/fips"]
hashbrown = ["rustls-crate/hashbrown"]
read_buf = ["rustls-crate/read_buf"]
ring = ["rustls-crate/ring"]
rustversion = ["rustls-crate/rustversion"]
zlib = ["rustls-crate/zlib"]
